# forecastbench

v2/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
v2/scripts/: run_benchmark.py
v2/src/forecastbench/: __init__.py  cli.py  config.py  models.py  registry.py  resolution.py  sampling.py  scoring.py
v2/src/forecastbench/forecasters/: __init__.py  base.py  llm.py
v2/src/forecastbench/sources/: __init__.py  base.py  fred.py  good_judgment.py  infer.py  kalshi.py  manifold.py  metaculus.py  polymarket.py  yfinance.py
v2/src/forecastbench/storage/: __init__.py  base.py  sqlite.py
v2/tests/: conftest.py  test_forecasters.py  test_pipeline.py  test_registry.py  test_resolution.py  test_scoring.py  test_sources.py  test_storage.py
v2/tests/forecasters/: test_llm_integration.py  test_llm_unit.py
v2/tests/sources/: test_fred.py  test_good_judgment.py  test_infer.py  test_manifold.py  test_metaculus.py  test_polymarket.py  test_registry.py  test_yfinance.py
